--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Etch-A-Sketch-theOdinProject</title>
 		<meta name="description" content="Etch-A-Sketch-the_Odin_Project">
+		<link rel="stylesheet" href="main.css" >
 		<script> var $newLine;
 		$('#b1').click(function() {
 			for (i=0; i<16; i++) {
