--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
 		<title>Etch-A-Sketch-theOdinProject</title>
 		<meta name="description" content="Etch-A-Sketch-the_Odin_Project">
 		<link rel="stylesheet" href="main.css" >
-		<script> var $newLine;
-		$('#b1').click(function() {
-			for (i=0; i<16; i++) {
-				$newLine= $('<div class="line"></div>');
-				$('#pixelgrid').append($newLine);
-
-				for (j=0; j<16; j++) {
-					$newLine.append('<div class="square">'+j+'</div>');
-				}
-			}
-		});
+		<script> $(document).ready(function() {
+       for(i=0; i<16; i++) {
+           $('#grid16').append('<div class="line">');
+               for(j=0; j<16; j++) {
+                   $('#grid16').append('<div class="square">'+j+'</div>');
+               }
+           $('#grid16').append('</div>');
+       }
+});
 </script>
 	</head>
 
 	<body>
+	<div id="grid16"></div>
 	</body>
 	</html>
