--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
 	<body>
 	<div id="grid16"></div>
 	<script> 
-	var $grid = $('#grid16');
-	for (i = 0; i < 16; i++) 
+	$(document).ready(function() {
+	function draw(rows, columns)
 {
-    var row = '<div>';
-    for (j = 0; j < 16; j++)
-    row += '<div class="square">' + j + '</div>';
-    row += '</div>';
-    $grid.append(row);
+	var width =  (800 - columns * 2) / columns + 'px';
+	var height = (600 - rows * 2) / rows + 'px';
+	for (var i = 0; i < rows; i++) {
+		for (var j = 0; j < columns; j++) {
+			$("#grid16").append('<div></div>');
+		};
+	};
+
+	$('div').css('height', height);
+	$('div').css('width', width);
 }
 </script>
 	</body>
