--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 	<body>
 	<div id="grid16"></div>
 	<script> 
-	$(document).ready(function() {
-	draw(rows, columns);
+	$(document).ready(function(rows, columns) {
 	var width =  (800 - columns * 2) / columns + 'px';
 	var height = (600 - rows * 2) / rows + 'px';
 	for (var i = 0; i < rows; i++) {
