--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Etch-A-Sketch-theOdinProject</title>
 		<meta name="description" content="Etch-A-Sketch-the_Odin_Project">
 		<link rel="stylesheet" href="main.css" >
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script
 	</head>
 
 	<body>
